--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ bower_modules/
 
 # Don't track build output
 dist/
+packages/
+bin/
+obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+obj/
