copy static files to local

--- a/ao.parklife.webcontainer.csproj
+++ b/ao.parklife.webcontainer.csproj
@@ -111,10 +111,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="dist\css.css" />
-    <Content Include="dist\fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="dist\index.html" />
-    <Content Include="dist\scripts.js" />
+    <Content Include="dist\css.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dist\index.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="dist\scripts.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -130,11 +135,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="dist\fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="dist\fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="dist\fonts\glyphicons-halflings-regular.woff" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
