copy css to dist/css

--- a/ao.parklife.webcontainer.csproj
+++ b/ao.parklife.webcontainer.csproj
@@ -114,6 +114,7 @@
     <Content Include="dist\css.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="dist\css\css.css" />
     <Content Include="dist\fonts\glyphicons-halflings-regular.svg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
