point to live api. include floorplan image

--- a/ao.parklife.webcontainer.csproj
+++ b/ao.parklife.webcontainer.csproj
@@ -118,6 +118,9 @@
     <Content Include="dist\images\bobafett.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="dist\images\floorplan.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="dist\images\green_logo.svg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
